--- a/apps/manager/templates/groups_list.html
+++ b/apps/manager/templates/groups_list.html
@@ -45,7 +45,7 @@
     </table>
         <div class="d-flex justify-content-between w-100 mt-3">
             <button onclick="location.href='{% url 'choose-list' %}'" class="btn btn-outline-dark">Назад</button>
-            <button onclick="location.href='{% url 'group-add' %}'" class="btn btn-outline-success">Дадати подію</button>
+            <button onclick="location.href='{% url 'group-add' %}'" class="btn btn-outline-success">Додати подію</button>
         </div>
     </div>
 
