--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
             {% if user.is_manager %}
                 <h5>Менеджер</h5>
             {% else %}
-                <h5>User</h5>
+                <h5>Користувач</h5>
             {% endif %}
             {% endif %}
             {% if user.is_authenticated %}
