--- a/templates/start.html
+++ b/templates/start.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <main>
-        <h2>Ласкаво просимо до Managementio</h2>
+        <h2>Ласкаво просимо до Calendario</h2>
         <p>Готові почати? Натисніть на кнопку</p>
         <button class="start-button" onclick="location.href='{% url 'choose-who' %}'">Почати</button>
     </main>
